New in 0.1.0:

* UI: Improve formatting of strings on `index` and `show` pages
* Improvement: Generate a single controller to serve all resources,
  to reduce noise after running the install generator.
* Improvement: Add `Administrate::Field::DateTime`
  for displaying dates, times, and datetimes.
* Improvement: Add `Administrate::Field::Number`
  for displaying currency, integers, and floats.
  Supports options `prefix` and `decimals`.

New in 0.0.9:

* Bug Fix: Improve development environment;
  developers can now edit Administrate-related files in their app
  without needing to restart their server afterwards.
* Bug Fix: Stop flash from index page from persisting across requests
* UI: Use a light background
* UI: Improve element spacing on index page
* UI: Improve flash message appearance
* UI: make elements more consistent between index and show pages

New in 0.0.8:

* Change: Change the `DashboardManifest` and `ModelDashboard` APIs
  to use constants instead of methods. Recognized constants are:
  * `ATTRIBUTE_TYPES`
  * `FORM_ATTRIBUTES`
  * `SHOW_PAGE_ATTRIBUTES`
  * `FORM_ATTRIBUTES`

New in 0.0.7:

* Improvement: Support `has_one` relationships
* Improvement: Support `has_many :through` associations
  with a custom `source` option.
* Improvement: Support `has_many` associations
  with a custom `class_name` option.
* Change: use field classes for `attribute_types` instead of symbols.
  The new interface adds the `.with_options` class method,
  which allows developers to specify options that will be applied
  when the field object is initialized.

New in 0.0.6:

* Improvement: Add an outline to links on their focus state
  to improve accessibility through keyboard navigation.
* Improvement: Limit index pages
  to displaying four columns of attributes by default,
  to reduce clutter and overflow in the first-run experience.
* Improvement: Limit index pages to showing 20 items by default.
  Developers can customize the action to update or remove the limit,